Add session recording metadata API
